Added files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,17 @@ TSWLatexianTemp_000006.pdf
 TSWLatexianTemp_000006.synctex
 
 TSWLatexianTemp_000006.tex
+
+TSWLatexianTemp_000190.tex
+
+TSWLatexianTemp_000190.log
+
+TSWLatexianTemp_000190.pdf
+
+TSWLatexianTemp_000190.synctex
+
+TSWLatexianTemp_ArtemYankov_Resume.log
+
+TSWLatexianTemp_ArtemYankov_Resume.pdf
+
+TSWLatexianTemp_ArtemYankov_Resume.tex
